<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab_02_planowanie_ruchu</name>
  <version>0.0.0</version>
  <description>Pakiet zawierający generatory trajektorii robota, w tym ruch po boku kwadratu, okręgu i spirali. Robot reaguje na przeszkody i zmienia trajektorię, aby unikać kolizji.</description>
  <maintainer email="275417@student.pwr.edu.pl">Michał Markuzel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
